--- a/style.css
+++ b/style.css
@@ -2,9 +2,54 @@ body{
    
 }
 .box{
-    margin-top: 20%;
-    margin-left: 49%;
-    background-color: blue;
-    width: 50px;
-    height: 50px;
+    margin-top: 5%;
+    margin-left: 45%;
+    background-color: rgb(34, 34, 34);
+    width: 70px;
+    height: 20px;
+    display: inline-block;
+}
+.box1{
+    margin-top: 8%;
+    margin-left: 55%;
+    background-color: rgb(34, 34, 34);
+    width: 70px;
+    height: 20px;
+    display: inline-block;
+}
+.box2{
+    margin-top: 11%;
+    margin-left: 45%;
+    background-color: rgb(34, 34, 34);
+    width: 70px;
+    height: 20px;
+    display: inline-block;
+}
+.box3{
+    margin-top: 12%;
+    margin-left: 55%;
+    background-color: rgb(34, 34, 34);
+    width: 70px;
+    height: 20px;
+    display: inline-block;
+}
+.img{
+    width: 100px;
+    margin-left: 44%;
+    animation-name: load;
+    animation-duration: 2s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    display: inline-block;
+}
+@keyframes load{
+    0%{
+        transform: translate(10px, -700px );
+        
+    }
+}
+@keyframes box{
+    0%{
+        transform: translate();
+    }
 }
